Improvements: refinements in the escapeQuery methods to avoid whitespace escaping, psm table display 10 elements by default, searchController updated with the new protein-identification library (new style for the link too), new category in the downloads for generated files, links to uniprot and esmbl and highlighting of modified amino acids.

--- a/pride-archive/web/trunk/src/main/webapp/resources/css/prider.css
+++ b/pride-archive/web/trunk/src/main/webapp/resources/css/prider.css
@@ -28,7 +28,6 @@
     display: none;
 }
 
-
 .search-hit {
     background-color: #FFFF00;
 }
@@ -625,3 +624,30 @@ a.sortLink {
 .float_l {
     float: left;
 }
+
+img.table_icon  {
+    height: 16px;
+    border: 3px solid lightgrey;
+    border-radius: 5px;
+    text-decoration: none;
+    margin: 0;
+
+}
+
+img.table_icon_hl {
+    height: 16px;
+    border: 3px solid yellow;
+    border-radius: 5px;
+    text-decoration: none;
+    margin: 0;
+
+}
+td a.no_visual_link {
+    border-bottom-color: transparent;
+}
+
+.modified_aa {
+    font-weight: bold;
+    color: #ff5d5f;
+}
+
